# stocksentry

./: .gitignore  .replit  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  start.py  stock_analysis.db
.streamlit/: config.toml
styles/: custom.css
utils/: __init__.py  analysis.py  data_export.py  database.py  esg_analysis.py  stock_data.py  technical_analysis.py  visualizations.py
