[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "sqlalchemy>=2.0.37",
    "streamlit>=1.42.0",
    "twilio>=9.4.4",
    "xlsxwriter>=3.2.2",
    "yfinance>=0.2.52",
]
